--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=GuildProject
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Starter_map.Starter_map
-GameDefaultMap=/Game/Maps/Starter_map.Starter_map
+EditorStartupMap=/Game/Maps/SkyForest.SkyForest
+GameDefaultMap=/Game/Maps/SkyForest.SkyForest
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
