--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
-GameInstanceClass=/Game/Blueprints/MPGameInstance.MPGameInstance_C
+GameInstanceClass=/Script/Engine.GameInstance
 
 [OnlineSubsystem]
 DefaultPlatormService=Null
